--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body{
 }
 
 .chat-body{
-    overflow: hidden;
+    overflow: auto;
 }
 
 .font-lightgrey{
@@ -94,7 +94,8 @@ body{
 .card{
     display: flex;
     flex-direction: column;
-    height: 100%
+    height: 100%;
+    overflow: auto;
 }
 
 .sidebar-header,
@@ -112,6 +113,7 @@ body{
 
 
 /* SIDEBAR */
+
 
 .sidebar-header{
     border-right: 1px solid rgb(177, 177, 177);
@@ -269,6 +271,8 @@ body{
     .sidebar{
         display: block;
         width: 100px;
+        display: flex;
+        flex-direction: column;
     }
 
     .sidebar-header .profile-img{
