--- a/style.css
+++ b/style.css
@@ -144,6 +144,9 @@ body{
 .bar{
     height: 30px;
     width: 100%;
+    border-radius: 10px;
+    border: 1px solid lightgrey;
+    padding: 0 10px;
 }
 
 .profiles-list{
@@ -153,6 +156,10 @@ body{
 
 .profiles-list > li{
     border-bottom: 1px solid lightgray;
+}
+
+.profiles-list > li.profile.hidden{
+    display: none;
 }
 
 .profiles-list li > span{
@@ -172,6 +179,7 @@ body{
     background-color: rgb(209, 219, 229);
     cursor: pointer;
 }
+
 
 /* CHAT */
 
@@ -197,7 +205,7 @@ body{
 .chat-footer .tools-list{
     display: flex;
     gap: 20px;
-    padding: 10px;
+    padding: 10px 15px;
     color: rgb(177, 177, 177);
     margin-left: auto;
     justify-content: space-between;
@@ -262,7 +270,6 @@ body{
     z-index: 1;
 
 }
-
 
 
 /* MEDIA QUERY */
