--- a/style.css
+++ b/style.css
@@ -256,7 +256,7 @@ body{
 }
 
 .menu-hover{
-    /* border: 1px solid black; */
+    border: 1px solid rgb(183, 183, 183);
     position: absolute;
     top: 26px;
     right: 10px;
@@ -274,6 +274,7 @@ body{
 
 .menu-hover > li:hover{
     background-color: white;
+    border-radius: 10px;
 }
 
 .shown{
